--- a/AW1 - 31/avali.css
+++ b/AW1 - 31/avali.css
@@ -12,8 +12,22 @@
     
 }
 
+.titulo{
+    margin-top: 75px;
+    margin-left: 34ch;
+
+}
+
+.variav{
+    margin-top: 20px;
+    margin-left: 257px;
+    width: 50vh;
+    
+}
 
 .form{
+    width: 80vh;
+    height: 80ch;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.8);
     top: 50%;
@@ -23,20 +37,39 @@
     padding: 15px;
 }
 
+p{
+    margin-top: 20px;
+    margin-left: 180px;
+    font-size: 25px;
+}
 
+input[type=nome] {
+    height: 35px;
+    font-size: 20px;
+}
+
+input[type=number] {
+    height: 35px;
+    font-size: 20px;
+}
+  
 .botao{
-    width: 60px;
-    height: 60px;
+    width: 100px;
+    height: 100px;
     font-size: 25px;
     cursor: pointer;
-    background-color: #005C53;
+    border-radius: 15px;
+    background-color: #991251;
     border: none;
-    color: white;
+    color: #BFB7A8;
     transition: 0.75s;
     margin: 2px;
+    margin-top: 25px;
+    margin-left: 331px;
 }
 
 .botao:hover{
-    background-color: black;
+    background-color: #290516;
     transition: 0.75s;
 }
+
